--- a/src/styles/variables/typography.css
+++ b/src/styles/variables/typography.css
@@ -1,3 +1,45 @@
+@font-face {
+  font-family: "DM Sans, SemiBold Italic";
+  src: url("/fonts/DMSans-SemiBoldItalic.ttf") format("truetype");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Bricolage Grotesque, Bold";
+  src: url("/fonts/BricolageGrotesque-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "DM Sans, Light";
+  src: url("/fonts/DMSans-Light.ttf") format("truetype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "DM Sans, Bold";
+  src: url("/fonts/DMSans-Bold.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "DM Sans, SemiBold";
+  src: url("/fonts/DMSans-SemiBold.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "DM Sans, Medium";
+  src: url("/fonts/DMSans-Medium.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
 :root {
   --text-preset-1-font-family: "DM Sans, SemiBold Italic";
   --text-preset-1-font-size: 96px;
