--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,38 @@
-#root {
-  max-width: 1280px;
+:root {
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+  --background-color: var(--color-neutral-900);
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body {
+  background-color: var(--background-color);
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+h1 {
+  color: var(--color-neutral-0);
+  font-family: var(--text-preset-2-font-family);
+  font-size: var(--text-preset-2-font-size);
+  line-height: var(--text-preset-2-line-height);
+  letter-spacing: var(--text-preset-2-letter-spacing);
+}
+
+@media (max-width: 768px) {
+  body {
+    padding-inline: var(--spacing-200);
+    padding-block: var(--spacing-200) var(--spacing-600);
   }
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+@media (min-width: 768px) {
+  body {
+    padding-inline: var(--spacing-300);
+    padding-block: var(--spacing-300) var(--spacing-1000);
   }
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+@media (min-width: 1440px) {
+  body {
+    padding-inline: var(--spacing-1400);
+    padding-block: var(--spacing-600) var(--spacing-1000);
+  }
 }
