--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -11,12 +11,13 @@
   &.dropdown,
   &.trigger-units,
   &.trigger-days {
+    font: var(--font-7);
     border-radius: var(--radius-8);
   }
 
   &.dropdown {
     width: 100%;
-    font-family: var(--text-preset-7-font-family);
+    font: var(--font-7);
     gap: 10px;
     justify-content: space-between;
 
@@ -45,7 +46,7 @@
   &.search {
     padding: 16px 24px;
     background-color: var(--color-blue-500);
-    font-family: var(--text-preset-5medium-font-family);
+    font: var(--font-5m);
     border-radius: var(--radius-12);
 
     &:hover,
