--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -8,14 +8,14 @@
   justify-content: center;
   padding: 8px 10px;
 
-  &.dropdown,
+  &.option,
   &.trigger-units,
   &.trigger-days {
     font: var(--font-7);
     border-radius: var(--radius-8);
   }
 
-  &.dropdown {
+  &.option {
     width: 100%;
     font: var(--font-7);
     gap: 10px;
