--- a/src/components/DropdownMenu/DropdownMenu.module.css
+++ b/src/components/DropdownMenu/DropdownMenu.module.css
@@ -5,14 +5,11 @@
   border-radius: var(--radius-12);
   display: flex;
   flex-direction: column;
-  gap: 4px;
   align-items: flex-start;
+  gap: 4px;
+  width: 12rem;
 
   &.units {
     padding-block: 6px;
-  }
-
-  > * {
-    width: 100%;
   }
 }
