--- a/src/components/InfoCard/InfoCard.module.css
+++ b/src/components/InfoCard/InfoCard.module.css
@@ -3,11 +3,11 @@
   flex-direction: column;
   padding: 20px;
   gap: 24px;
+  align-items: flex-start;
 
   background-color: var(--color-neutral-800);
   border-radius: var(--radius-12);
   border: 1px solid var(--color-neutral-600);
-  width: min-content;
 
   .infoName {
     text-transform: capitalize;
