--- a/src/components/DailyForecastCard/DailyForecastCard.module.css
+++ b/src/components/DailyForecastCard/DailyForecastCard.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 16px;
-  width: min-content;
+  /* width: min-content; */
 
   padding: 10px 16px;
   background-color: var(--color-neutral-800);
