refactor(components): relocate DayDropdown from blocks

--- a/src/blocks/HourlyForecast/HourlyForecast.module.css
+++ b/src/blocks/HourlyForecast/HourlyForecast.module.css
@@ -11,7 +11,10 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    line-height: 0;
+
+    h2 {
+      line-height: 0;
+    }
   }
 
   .hours {
