feat(block): LocationSearch bar & dropdown

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -20,6 +20,7 @@
     font: var(--font-7);
     gap: 10px;
     justify-content: space-between;
+    text-align: left;
 
     &:hover,
     &:active {
