--- a/src/components/Dropdown/DropdownMenu/DropdownMenu.module.css
+++ b/src/components/Dropdown/DropdownMenu/DropdownMenu.module.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 4px;
-  width: 12rem;
+  min-width: 12rem;
   position: static;
 
   &.units {
