--- a/src/blocks/HourlyForecast/HourlyForecast.module.css
+++ b/src/blocks/HourlyForecast/HourlyForecast.module.css
@@ -6,6 +6,8 @@
   background-color: var(--color-neutral-800);
   border: 1px solid transparent;
   border-radius: var(--radius-20);
+  max-height: calc(100vh - 3rem);
+  overflow: scroll;
 
   .header {
     display: flex;
