feat: add loading state ui

--- a/src/components/HourlyForecastCard/HourlyForecastCard.module.css
+++ b/src/components/HourlyForecastCard/HourlyForecastCard.module.css
@@ -9,6 +9,10 @@
 
   color: var(--color-neutral-0);
 
+  &.loading > * {
+    opacity: 0;
+  }
+
   .weatherNTime {
     display: flex;
     align-items: center;
