--- a/src/components/DailyForecastCard/DailyForecastCard.module.css
+++ b/src/components/DailyForecastCard/DailyForecastCard.module.css
@@ -3,13 +3,16 @@
   flex-direction: column;
   align-items: center;
   gap: 16px;
-  /* width: min-content; */
 
   padding: 10px 16px;
   background-color: var(--color-neutral-800);
   color: var(--color-neutral-0);
   border: 1px solid var(--color-neutral-600);
   border-radius: var(--radius-12);
+
+  &.loading > * {
+    opacity: 0;
+  }
 
   .day {
     font: var(--font-6);
